--- a/flutter_integration_tests/pubspec.yaml
+++ b/flutter_integration_tests/pubspec.yaml
@@ -31,8 +31,9 @@ dependencies:
   shared_preferences: ^0.5.12+4
 
 dev_dependencies:
-  flutter_test:
+  flutter_driver:
     sdk: flutter
+  test: any
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
